workshop/01/01-namespace-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n-workshop
