workshop/01/05-n8n-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n-workshop
spec:
  type: ClusterIP
  selector:
    app: n8n-main
  ports:
    - port: 5678
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-main
  namespace: n8n-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-main
  template:
    metadata:
      labels:
        app: n8n-main
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "800m"
